// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Private - Common - ModheaderSection Snapshot ModheaderSection con link 1`] = `
<DocumentFragment>
  <section
    class="mod-headersection  --line"
    role="contentinfo"
  >
    <h3
      class="com-title --font-primary --l --font-black"
    >
      <a
        class="com-link"
        href="https://lanacion.com.ar/"
        title="Titulo Separador"
      >
        Titulo Separador
      </a>
    </h3>
  </section>
</DocumentFragment>
`;

exports[`Private - Common - ModheaderSection Snapshots ModheaderSection 1`] = `
<DocumentFragment>
  <section
    class="mod-headersection  --line"
    role="contentinfo"
  >
    <h3
      class="com-title --font-primary --l --font-black"
    >
      Titulo Separador
    </h3>
  </section>
</DocumentFragment>
`;
